// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should be a Large Primary Button 1`] = `
<button
  className="is-primary is-large button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
/>
`;

exports[`Button component Should be a Primary Button 1`] = `
<button
  className="is-primary button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
/>
`;

exports[`Button component Should be a default Button 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
/>
`;

exports[`Button component Should be a reset form button 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
  type="reset"
/>
`;

exports[`Button component Should be a submit form button 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
  type="submit"
/>
`;

exports[`Button component Should be an anchor button 1`] = `
<a
  className="button"
  disabled={false}
  href="https://github.com/couds/react-bulma-components"
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
/>
`;

exports[`Button component Should render as a React element link with to prop 1`] = `
<a
  href="http://google.com"
>
  TEST
</a>
`;

exports[`Button component Should render as a html button 1`] = `
<button
  className="is-danger button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
/>
`;

exports[`Button component Should render as a static Button 1`] = `
<span
  className="is-primary is-static button"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
/>
`;

exports[`Button component Should render be disabled 1`] = `
<button
  className="button"
  disabled={true}
  style={Object {}}
  tabIndex={-1}
/>
`;
